# OneNet

./: .gitattributes  README.md  dev-requirements.txt  evaluate_network.py  pyproject.toml  setup.py  train.py
configs/: one_msd_brain.yaml  one_msd_heart.yaml  one_msd_lung.yaml  segone_msd_heart.yaml  segone_msd_lung.yaml
datasets/: dataloaders.py
onenet/: _version.py  trainer.py
onenet/networks/: onenet_network.py
onenet/networks/decoders/: common_decoder_seg.py  onenet_decoder_seg.py
onenet/networks/encoders/: one_encoder.py
